Add code from personal codepen

--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
   <link rel="stylesheet" href="index.css"/>
 </head>
 <body>
-
+<div class="container">
+  <header class="header">My Artsy Website</header>
+  <div class="artwork">
+    <h3>My Canvas Artwork</h3>
+    <canvas></canvas>
+  </div>
+  <div class="artwork">
+    <h3>My SVG Artwork</h3>
+    <svg></svg>
+  </div>
+  <div class="about">
+    <p>Mr. Artist is a very recognized and admired man</p>
+  </div>
+  <div class="footer">Footer</div>
+</div>
 </body>
 </html>
