--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
   <meta charset="UTF-8">
   <title>Incredible Artworks</title>
   <link rel="stylesheet" href="index.css"/>
+  <script type="javascript" src="canvas.js"></script>
 </head>
 <body>
 <div class="container">
   <header class="header">My Artsy Website</header>
   <div class="artwork">
     <h3>My Canvas Artwork</h3>
-    <canvas></canvas>
+    <canvas id="canvas">
+    </canvas>
   </div>
   <div class="artwork">
     <h3>My SVG Artwork</h3>
