--- a/index.html
+++ b/index.html
@@ -4,24 +4,25 @@
   <meta charset="UTF-8">
   <title>Incredible Artworks</title>
   <link rel="stylesheet" href="index.css"/>
-  <script type="javascript" src="canvas.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
 <div class="container">
   <header class="header">My Artsy Website</header>
   <div class="artwork">
     <h3>My Canvas Artwork</h3>
-    <canvas id="canvas">
-    </canvas>
+    <canvas id="canvas"></canvas>
   </div>
   <div class="artwork">
     <h3>My SVG Artwork</h3>
     <svg></svg>
   </div>
   <div class="about">
+    <h3>About the artist</h3>
     <p>Mr. Artist is a very recognized and admired man</p>
   </div>
   <div class="footer">Footer</div>
 </div>
+<script type="text/javascript" src="index.js"></script>
 </body>
 </html>
