Change footer to include documentation

--- a/index.html
+++ b/index.html
@@ -21,7 +21,24 @@
     <h3>About the artist</h3>
     <p>Mr. Artist is a very recognized and admired man</p>
   </div>
-  <div class="footer">Footer</div>
+  <div class="footer">
+    <button class="info-rev">Click me and see what happens</button>
+    <div class="info">
+      <h5>Grid and Flexbox</h5>
+      <p>Bla bla bla</p>
+      <h5>Canvas and SVG</h5>
+      <p>Bla bla bla</p>
+      <h5>jQuery</h5>
+      <p>Bla bla bla</p>
+      <h5>Sources</h5>
+      <ul>
+        <li><a href="https://api.jquery.com">jQuery documentation</a></li>
+        <li><a href="https://www.w3schools.com/jquery/default.asp">W3Schools jQuery</a></li>
+        <li><a href="https://www.w3schools.com/graphics/default.asp">W3Schools Graphics</a></li>
+        <li><a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/#flexbox-background"></a></li>
+      </ul>
+    </div>
+  </div>
 </div>
 <script type="text/javascript" src="index.js"></script>
 </body>
