Add basic SVG rectangle

--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
   </div>
   <div class="artwork">
     <h3>My SVG Artwork</h3>
-    <svg></svg>
+    <svg viewbox="0 0 500 300">
+      <defs>
+
+      </defs>
+      <rect id="svg-background" width="500" height="300" />
+    </svg>
   </div>
   <div class="about">
     <h3>About the artist</h3>
@@ -35,7 +40,9 @@
         <li><a href="https://api.jquery.com">jQuery documentation</a></li>
         <li><a href="https://www.w3schools.com/jquery/default.asp">W3Schools jQuery</a></li>
         <li><a href="https://www.w3schools.com/graphics/default.asp">W3Schools Graphics</a></li>
-        <li><a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/#flexbox-background"></a></li>
+        <li><a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/#flexbox-background"></a>CSS-tricks for flexbox and grid</li>
+        <li><a href="http://jqfundamentals.com/">jQuery Fundamentals</a></li>
+        <li><a href="https://stackoverflow.com/">Stack Overflow</a></li>
       </ul>
     </div>
   </div>
