--- a/index.html
+++ b/index.html
@@ -9,44 +9,57 @@
 <body>
 <div class="container">
   <header class="header">My Artsy Website</header>
-  <div class="artwork">
+  <div class="artwork" id="canvas-artwork">
     <h3>My Canvas Artwork</h3>
-    <canvas id="canvas"></canvas>
+    <canvas id="canvas" width="500px" height="300px"></canvas>
   </div>
-  <div class="artwork">
+  <div class="artwork" id="svg-artwork">
     <h3>My SVG Artwork</h3>
-    <svg viewbox="0 0 500 300">
+    <svg id="svg-artwork" viewbox="0 0 500 300">
       <defs>
-
       </defs>
-      <rect id="svg-background" width="500" height="300" />
+      <rect id="svg-background" width="500" height="300"/>
+      <ellipse cx="200" cy="70" rx="45" ry="30" />
+      <ellipse cx="300" cy="70" rx="45" ry="30" />
+      <circle id="svg-left-eye" cx="200" cy="70" r="20" stroke="black" stroke-width="3" fill="white"/>
+      <circle id="svg-right-eye" cx="300" cy="70" r="20" stroke="black" stroke-width="3" fill="white"/>
+      <rect id="svg-nose" width="10" height="50" x="250" y="100" />
     </svg>
   </div>
   <div class="about">
     <h3>About the artist</h3>
     <p>Mr. Artist is a very recognized and admired man</p>
   </div>
+  <div class="docs">
+    <button class="info-rev">Documentation</button>
+  </div>
+  <div class="info">
+    <h5>Grid and Flexbox</h5>
+    <p>Bla bla bla</p>
+    <h5>Canvas and SVG</h5>
+    <p>Bla bla bla</p>
+    <h5>jQuery</h5>
+    <p>Bla bla bla</p>
+    <h5>Sources</h5>
+    <ul>
+      <li><a href="https://api.jquery.com">jQuery documentation</a></li>
+      <li><a href="https://www.w3schools.com/jquery/default.asp">W3Schools jQuery</a></li>
+      <li><a href="https://www.w3schools.com/graphics/default.asp">W3Schools Graphics</a></li>
+      <li><a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/#flexbox-background"></a>CSS-tricks for
+        flexbox and grid
+      </li>
+      <li><a href="http://jqfundamentals.com/">jQuery Fundamentals</a></li>
+      <li><a href="https://stackoverflow.com/">Stack Overflow</a></li>
+    </ul>
+  </div>
   <div class="footer">
-    <button class="info-rev">Click me and see what happens</button>
-    <div class="info">
-      <h5>Grid and Flexbox</h5>
-      <p>Bla bla bla</p>
-      <h5>Canvas and SVG</h5>
-      <p>Bla bla bla</p>
-      <h5>jQuery</h5>
-      <p>Bla bla bla</p>
-      <h5>Sources</h5>
-      <ul>
-        <li><a href="https://api.jquery.com">jQuery documentation</a></li>
-        <li><a href="https://www.w3schools.com/jquery/default.asp">W3Schools jQuery</a></li>
-        <li><a href="https://www.w3schools.com/graphics/default.asp">W3Schools Graphics</a></li>
-        <li><a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/#flexbox-background"></a>CSS-tricks for flexbox and grid</li>
-        <li><a href="http://jqfundamentals.com/">jQuery Fundamentals</a></li>
-        <li><a href="https://stackoverflow.com/">Stack Overflow</a></li>
-      </ul>
-    </div>
+    
   </div>
 </div>
 <script type="text/javascript" src="index.js"></script>
+<script type="text/javascript" src="svgCanvas.js"></script>
+<script id="__bs_script__">//<![CDATA[
+document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.js?v=2.26.12'><\/script>".replace("HOST", location.hostname));
+//]]></script>
 </body>
 </html>
