File updates. Change info toggle

--- a/index.html
+++ b/index.html
@@ -32,30 +32,39 @@
     <h3>About the artist</h3>
     <p>Mr. Artist is a very recognized and admired man. He has dedicated the entirety of his existence to the sole
       purpose of creating graphic content with HTML and SVG. His style is thoroughly influenced by his youth, which he
-      spent great amounts of time watching television. In his most recent collection, you can find his depictions of the
+      spent great amounts of time surfing the net. When he was 5 years old, he discovered the joy of canvas and SVG,
+      and has never let down his keyboard since. In his most recent collection, you can find his depictions of the
       human existence. </p>
   </div>
   <div class="docs">
-    <button class="info-rev">Show Documentation</button>
+    <button class="info-rev">Documentation</button>
   </div>
   <div class="info">
-    <h5>Grid and Flexbox</h5>
-    <p>Bla bla bla</p>
-    <h5>Canvas and SVG</h5>
-    <p>Bla bla bla</p>
-    <h5>jQuery</h5>
-    <p>Bla bla bla</p>
-    <h5>Sources</h5>
-    <ul>
-      <li><a href="https://api.jquery.com">jQuery documentation</a></li>
-      <li><a href="https://www.w3schools.com/jquery/default.asp">W3Schools jQuery</a></li>
-      <li><a href="https://www.w3schools.com/graphics/default.asp">W3Schools Graphics</a></li>
-      <li><a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/#flexbox-background"></a>CSS-tricks for
-        flexbox and grid
-      </li>
-      <li><a href="http://jqfundamentals.com/">jQuery Fundamentals</a></li>
-      <li><a href="https://stackoverflow.com/">Stack Overflow</a></li>
-    </ul>
+    <div id="flexbox-info" >
+      <h5>Grid and Flexbox</h5>
+      <p>Bla bla bla</p>
+    </div>
+    <div id="canvas-svg-info">
+      <h5>Canvas and SVG</h5>
+      <p>Bla bla bla</p>
+    </div>
+    <div id="jquery-info">
+      <h5>jQuery</h5>
+      <p>Bla bla bla</p>
+    </div>
+    <div id="sources">
+      <h5>Sources</h5>
+      <ul>
+        <li><a href="https://api.jquery.com">jQuery documentation</a></li>
+        <li><a href="https://www.w3schools.com/jquery/default.asp">W3Schools jQuery</a></li>
+        <li><a href="https://www.w3schools.com/graphics/default.asp">W3Schools Graphics</a></li>
+        <li><a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/#flexbox-background"></a>CSS-tricks for
+          flexbox and grid
+        </li>
+        <li><a href="http://jqfundamentals.com/">jQuery Fundamentals</a></li>
+        <li><a href="https://stackoverflow.com/">Stack Overflow</a></li>
+      </ul>
+    </div>
   </div>
   <div class="footer">
     <p>All rights reserved to Mr. Artist</p>
@@ -63,7 +72,7 @@
 </div>
 <script type="text/javascript" src="index.js"></script>
 <script type="text/javascript" src="svgCanvas.js"></script>
-
+<script type="text/javascript" src="button.js"></script>
 <script id="__bs_script__">//<![CDATA[
 document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.js?v=2.26.12'><\/script>".replace("HOST", location.hostname));
 //]]></script>
