Make SVG click change background

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       human existence. </p>
   </div>
   <div class="docs">
-    <button class="info-rev">Documentation</button>
+    <button class="info-rev">Show Documentation</button>
   </div>
   <div class="info">
     <div id="flexbox-info" >
