Create grid for docs

--- a/index.html
+++ b/index.html
@@ -37,22 +37,22 @@
       human existence. </p>
   </div>
   <div class="docs">
-    <button class="info-rev">Show Documentation</button>
+    <button id="info-button">Show Documentation</button>
   </div>
   <div class="info">
-    <div id="flexbox-info" >
+    <div class="info-grid" id="flexbox-info" >
       <h5>Grid and Flexbox</h5>
       <p>Bla bla bla</p>
     </div>
-    <div id="canvas-svg-info">
+    <div class="info-grid" id="canvas-svg-info">
       <h5>Canvas and SVG</h5>
       <p>Bla bla bla</p>
     </div>
-    <div id="jquery-info">
+    <div class="info-grid" id="jquery-info">
       <h5>jQuery</h5>
       <p>Bla bla bla</p>
     </div>
-    <div id="sources">
+    <div class="info-grid" id="sources">
       <h5>Sources</h5>
       <ul>
         <li><a href="https://api.jquery.com">jQuery documentation</a></li>
