--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Incredible Artworks</title>
   <link rel="stylesheet" href="index.css"/>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Maitree&display=swap" rel="stylesheet">
 </head>
 <body>
 <div class="container">
@@ -76,7 +77,7 @@
     </div>
   </div>
   <div class="footer">
-    <p>All rights reserved to Mr. Artist</p>
+    <p>Mr. Artist</p>
   </div>
 </div>
 <script type="text/javascript" src="index.js"></script>
