--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Incredible Artworks</title>
-  <link rel="stylesheet" href="index.css"/>
+  <link rel="stylesheet" href="style.css"/>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Maitree&display=swap" rel="stylesheet">
 </head>
@@ -25,7 +25,7 @@
       <circle id="svg-left-eye" cx="190" cy="63" r="20" stroke="black" stroke-width="3" fill="white"/>
       <circle id="svg-right-eye" cx="310" cy="73" r="20" stroke="black" stroke-width="3" fill="white"/>
       <rect id="svg-nose" width="10" height="50" x="250" y="100"/>
-      <path id="svg-nose-triangle" d="M 250 120 L 300 150 L  250 150"  />
+      <path id="svg-nose-triangle" d="M 250 120 L 300 150 L  250 150"/>
       <g id="svg-happy-face">
         <path d="M160 170 c20 100, 180 100, 200 0" stroke="black" stroke-width="3" fill="white"/>
         <path d="M160 170 L 360 170" stroke="black" stroke-width="3" fill="transparent"/>
@@ -33,8 +33,8 @@
       <g id="svg-angry-face">
         <path d="M160 240 c20 -100, 180 -100, 200 0" stroke="black" stroke-width="3" fill="white"/>
         <path d="M160 240 L 360 240" stroke="black" stroke-width="3" fill="transparent"/>
-        <path d="M240 50 L 150 10" stroke="black" stroke-width="6" />
-        <path d="M260 50 L 350 10" stroke="black" stroke-width="6" />
+        <path d="M240 50 L 150 10" stroke="black" stroke-width="6"/>
+        <path d="M260 50 L 350 10" stroke="black" stroke-width="6"/>
       </g>
     </svg>
   </div>
@@ -50,7 +50,7 @@
     <button id="info-button">Show Documentation</button>
   </div>
   <div class="info">
-    <div class="info-grid" id="flexbox-info" >
+    <div class="info-grid" id="flexbox-info">
       <h5>Grid and Flexbox</h5>
       <p>Bla bla bla</p>
     </div>
@@ -71,6 +71,7 @@
         <li><a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/#flexbox-background"></a>CSS-tricks for
           flexbox and grid
         </li>
+        <li><a href="https://www.webfx.com/blog/web-design/google-font-api-guide/">Guide for google fonts</a></li>
         <li><a href="http://jqfundamentals.com/">jQuery Fundamentals</a></li>
         <li><a href="https://stackoverflow.com/">Stack Overflow</a></li>
       </ul>
@@ -80,8 +81,8 @@
     <p>Mr. Artist</p>
   </div>
 </div>
-<script type="text/javascript" src="index.js"></script>
-<script type="text/javascript" src="svgCanvas.js"></script>
+<script type="text/javascript" src="canvas.js"></script>
+<script type="text/javascript" src="svg.js"></script>
 <script type="text/javascript" src="button.js"></script>
 <script id="__bs_script__">//<![CDATA[
 document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.js?v=2.26.12'><\/script>".replace("HOST", location.hostname));
